# ClimateControl

./: .gitignore  README.md
climate/: Button.cpp  Button.hpp  CO2Control.cpp  CO2Control.hpp  CO2Sensor.cpp  CO2Sensor.hpp  Climate.cpp  Climate.hpp  ClimateControl.cpp  ClimateControl.hpp  Config.hpp  DebugUtils.hpp  Display.cpp  Display.hpp  EEPROMUtils.hpp  ExecutiveDevices.cpp  ExecutiveDevices.hpp  HumidityControl.cpp  HumidityControl.hpp  IntervalWorckerBase.cpp  IntervalWorkerBase.cpp  IntervalWorkerBase.hpp  Keys.cpp  Keys.hpp  Menu.cpp  Menu.hpp  Monitoring.cpp  Monitoring.hpp  PID_v1.h  PageBase.hpp  PageGroup.cpp  PageGroup.hpp  PageValue.hpp  Relays.cpp  Relays.hpp  Sensors.cpp  Sensors.hpp  ServoMotors.cpp  ServoMotors.hpp  THSensors.cpp  (+7 more)
climate/lib/: PID_v1.cpp
climate/lib/Arduino-PID-Library_/examples/PID_RelayOutput/: PID_RelayOutput.ino
pp/: climat-cache.lib  climat.dsn  climat.kicad_pcb-bak  climat.net  climat.pro  climat.sch
pp/control/: climat-cache.lib  climat.bak  climat.kicad_pcb  climat.net  climat.pro  climat.sch
pp/lib/: climate_control.bak  climate_control.dcm  climate_control.lib
pp/power_switches/: power_switches-cache.lib  power_switches.bak  power_switches.dsn  power_switches.kicad_pcb  power_switches.kicad_pcb-bak  power_switches.net  power_switches.pro  power_switches.sch  power_switches.ses  power_switches.xml
test/: CMakeLists.txt  ClimateChangeService.cpp  ClimateChangeService.hpp  chars.py  main.cpp  main1.cpp  main_menu_test.cpp
test/stub/: Adafruit_BME280.h  Arduino.cpp  Arduino.h  DHT.cpp  DHT.h  HardwareSerial.cpp  HardwareSerial.hpp  LedControl.h  SoftwareSerial.h
test/visualisation/: chars.py  output  output_
test_devices/bme280/: bme280.ino
tests_devices/Throttle/: Throttle.ino
tests_devices/test_CO2_MH_Z19/: test_CO2_MH_Z19.ino
